@@ -9,6 +9,7 @@
 package org.elasticsearch.cluster.routing.allocation.decider;
 
 import org.elasticsearch.Version;
+import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
@@ -27,17 +28,16 @@ import org.elasticsearch.cluster.routing.allocation.RoutingAllocation;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.index.shard.ShardId;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.List;
+import java.util.Set;
 
 import static org.elasticsearch.common.settings.ClusterSettings.createBuiltInClusterSettings;
 import static org.hamcrest.Matchers.equalTo;
 
 public class NodeReplacementAllocationDeciderTests extends ESAllocationTestCase {
-    private static final DiscoveryNode NODE_A = newNode("node-a", "node-a", Collections.singleton(DiscoveryNodeRole.DATA_ROLE));
-    private static final DiscoveryNode NODE_B = newNode("node-b", "node-b", Collections.singleton(DiscoveryNodeRole.DATA_ROLE));
-    private static final DiscoveryNode NODE_C = newNode("node-c", "node-c", Collections.singleton(DiscoveryNodeRole.DATA_ROLE));
+    private static final DiscoveryNode NODE_A = newNode("node-a", "node-a", Set.of(DiscoveryNodeRole.DATA_ROLE));
+    private static final DiscoveryNode NODE_B = newNode("node-b", "node-b", Set.of(DiscoveryNodeRole.DATA_ROLE));
+    private static final DiscoveryNode NODE_C = newNode("node-c", "node-c", Set.of(DiscoveryNodeRole.DATA_ROLE));
     private final ShardRouting shard = ShardRouting.newUnassigned(
         new ShardId("myindex", "myindex", 0),
         true,
@@ -48,7 +48,7 @@ public class NodeReplacementAllocationDeciderTests extends ESAllocationTestCase 
     private final ClusterSettings clusterSettings = createBuiltInClusterSettings();
     private final NodeReplacementAllocationDecider decider = new NodeReplacementAllocationDecider();
     private final AllocationDeciders allocationDeciders = new AllocationDeciders(
-        Arrays.asList(
+        List.of(
             decider,
             new SameShardAllocationDecider(clusterSettings),
             new ReplicaAfterPrimaryActiveAllocationDecider(),
@@ -67,25 +67,27 @@ public class NodeReplacementAllocationDeciderTests extends ESAllocationTestCase 
             .nodes(DiscoveryNodes.builder().add(NODE_A).add(NODE_B).add(NODE_C).build())
             .build();
 
-        RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
+        RoutingAllocation allocation = createRoutingAllocation(state);
         DiscoveryNode node = randomFrom(NODE_A, NODE_B, NODE_C);
         RoutingNode routingNode = RoutingNodesHelper.routingNode(node.getId(), node, shard);
-        allocation.debugDecision(true);
 
-        Decision decision = decider.canAllocate(shard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertThat(decision.getExplanation(), equalTo(NodeReplacementAllocationDecider.YES__NO_REPLACEMENTS.getExplanation()));
+        assertThatDecision(
+            decider.canAllocate(shard, routingNode, allocation),
+            Decision.Type.YES,
+            NodeReplacementAllocationDecider.YES__NO_REPLACEMENTS.getExplanation()
+        );
 
-        decision = decider.canRemain(null, shard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertThat(decision.getExplanation(), equalTo(NodeReplacementAllocationDecider.YES__NO_REPLACEMENTS.getExplanation()));
+        assertThatDecision(
+            decider.canRemain(null, shard, routingNode, allocation),
+            Decision.Type.YES,
+            NodeReplacementAllocationDecider.YES__NO_REPLACEMENTS.getExplanation()
+        );
     }
 
     public void testCanForceAllocate() {
-        ClusterState state = prepareState(ClusterState.EMPTY_STATE, NODE_A.getId(), NODE_B.getName());
-        RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
+        ClusterState state = prepareState(NODE_A.getId(), NODE_B.getName());
+        RoutingAllocation allocation = createRoutingAllocation(state);
         RoutingNode routingNode = RoutingNodesHelper.routingNode(NODE_A.getId(), NODE_A, shard);
-        allocation.debugDecision(true);
 
         ShardRouting assignedShard = ShardRouting.newUnassigned(
             new ShardId("myindex", "myindex", 0),
@@ -97,62 +99,55 @@ public class NodeReplacementAllocationDeciderTests extends ESAllocationTestCase 
         assignedShard = assignedShard.initialize(NODE_A.getId(), null, 1);
         assignedShard = assignedShard.moveToStarted(ShardRouting.UNAVAILABLE_EXPECTED_SHARD_SIZE);
 
-        Decision decision = decider.canForceAllocateDuringReplace(assignedShard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.NO));
-        assertThat(
-            decision.getExplanation(),
-            equalTo("shard is not on the source of a node replacement relocated to the replacement target")
+        assertThatDecision(
+            decider.canForceAllocateDuringReplace(assignedShard, routingNode, allocation),
+            Decision.Type.NO,
+            "shard is not on the source of a node replacement relocated to the replacement target"
         );
 
         routingNode = RoutingNodesHelper.routingNode(NODE_B.getId(), NODE_B, assignedShard);
-
-        decision = decider.canForceAllocateDuringReplace(assignedShard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertThat(
-            decision.getExplanation(),
-            equalTo(
-                "node [" + NODE_A.getId() + "] is being replaced by node [" + NODE_B.getId() + "], and can be force vacated to the target"
-            )
+        assertThatDecision(
+            decider.canForceAllocateDuringReplace(assignedShard, routingNode, allocation),
+            Decision.Type.YES,
+            "node [" + NODE_A.getId() + "] is being replaced by node [" + NODE_B.getId() + "], and can be force vacated to the target"
         );
 
         routingNode = RoutingNodesHelper.routingNode(NODE_C.getId(), NODE_C, assignedShard);
-
-        decision = decider.canForceAllocateDuringReplace(assignedShard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.NO));
-        assertThat(
-            decision.getExplanation(),
-            equalTo("shard is not on the source of a node replacement relocated to the replacement target")
+        assertThatDecision(
+            decider.canForceAllocateDuringReplace(assignedShard, routingNode, allocation),
+            Decision.Type.NO,
+            "shard is not on the source of a node replacement relocated to the replacement target"
         );
     }
 
     public void testCannotRemainOnReplacedNode() {
-        ClusterState state = prepareState(ClusterState.EMPTY_STATE, NODE_A.getId(), NODE_B.getName());
-        RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
-        RoutingNode routingNode = RoutingNodesHelper.routingNode(NODE_A.getId(), NODE_A, shard);
-        allocation.debugDecision(true);
+        ClusterState state = prepareState(NODE_A.getId(), NODE_B.getName());
+        RoutingAllocation allocation = createRoutingAllocation(state);
 
-        Decision decision = decider.canRemain(indexMetadata, shard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.NO));
-        assertThat(
-            decision.getExplanation(),
-            equalTo("node [" + NODE_A.getId() + "] is being replaced by node [" + NODE_B.getId() + "], so no data may remain on it")
+        RoutingNode routingNode = RoutingNodesHelper.routingNode(NODE_A.getId(), NODE_A, shard);
+        assertThatDecision(
+            decider.canRemain(indexMetadata, shard, routingNode, allocation),
+            Decision.Type.NO,
+            "node [" + NODE_A.getId() + "] is being replaced by node [" + NODE_B.getId() + "], so no data may remain on it"
         );
 
         routingNode = RoutingNodesHelper.routingNode(NODE_B.getId(), NODE_B, shard);
-
-        decision = decider.canRemain(indexMetadata, shard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertEquals(NodeReplacementAllocationDecider.YES__NO_APPLICABLE_REPLACEMENTS, decision);
+        assertThatDecision(
+            decider.canRemain(indexMetadata, shard, routingNode, allocation),
+            Decision.Type.YES,
+            NodeReplacementAllocationDecider.YES__NO_APPLICABLE_REPLACEMENTS.getExplanation()
+        );
 
         routingNode = RoutingNodesHelper.routingNode(NODE_C.getId(), NODE_C, shard);
-
-        decision = decider.canRemain(indexMetadata, shard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertEquals(NodeReplacementAllocationDecider.YES__NO_APPLICABLE_REPLACEMENTS, decision);
+        assertThatDecision(
+            decider.canRemain(indexMetadata, shard, routingNode, allocation),
+            Decision.Type.YES,
+            NodeReplacementAllocationDecider.YES__NO_APPLICABLE_REPLACEMENTS.getExplanation()
+        );
     }
 
     public void testCanAllocateToNeitherSourceNorTarget() {
-        ClusterState state = prepareState(ClusterState.EMPTY_STATE, NODE_A.getId(), NODE_B.getName());
+        ClusterState state = prepareState(NODE_A.getId(), NODE_B.getName());
         RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
         RoutingNode routingNode = RoutingNodesHelper.routingNode(NODE_A.getId(), NODE_A, shard);
         allocation.debugDecision(true);
@@ -162,52 +157,62 @@ public class NodeReplacementAllocationDeciderTests extends ESAllocationTestCase 
             testShard = shard.initialize(NODE_C.getId(), null, 1);
             testShard = testShard.moveToStarted(ShardRouting.UNAVAILABLE_EXPECTED_SHARD_SIZE);
         }
-        Decision decision = decider.canAllocate(testShard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.NO));
-        assertThat(
-            decision.getExplanation(),
-            equalTo("node [" + NODE_A.getId() + "] is being replaced by [" + NODE_B.getName() + "], so no data may be allocated to it")
+        assertThatDecision(
+            decider.canAllocate(testShard, routingNode, allocation),
+            Decision.Type.NO,
+            "node [" + NODE_A.getId() + "] is being replaced by [" + NODE_B.getName() + "], so no data may be allocated to it"
         );
 
         routingNode = RoutingNodesHelper.routingNode(NODE_B.getId(), NODE_B, testShard);
-
-        decision = decider.canAllocate(testShard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.NO));
-        assertThat(
-            decision.getExplanation(),
-            equalTo(
-                "node ["
-                    + NODE_B.getId()
-                    + "] is replacing the vacating node ["
-                    + NODE_A.getId()
-                    + "], only data currently allocated "
-                    + "to the source node may be allocated to it until the replacement is complete"
-            )
+        assertThatDecision(
+            decider.canAllocate(testShard, routingNode, allocation),
+            Decision.Type.NO,
+            "node ["
+                + NODE_B.getId()
+                + "] is replacing the vacating node ["
+                + NODE_A.getId()
+                + "], only data currently allocated "
+                + "to the source node may be allocated to it until the replacement is complete"
         );
 
         routingNode = RoutingNodesHelper.routingNode(NODE_C.getId(), NODE_C, testShard);
-
-        decision = decider.canAllocate(testShard, routingNode, allocation);
-        assertThat(decision.getExplanation(), decision.type(), equalTo(Decision.Type.YES));
-        assertEquals(NodeReplacementAllocationDecider.YES__NO_APPLICABLE_REPLACEMENTS, decision);
+        assertThatDecision(
+            decider.canAllocate(testShard, routingNode, allocation),
+            Decision.Type.YES,
+            NodeReplacementAllocationDecider.YES__NO_APPLICABLE_REPLACEMENTS.getExplanation()
+        );
     }
 
-    private ClusterState prepareState(ClusterState initialState, String sourceNodeId, String targetNodeName) {
-        final SingleNodeShutdownMetadata nodeShutdownMetadata = SingleNodeShutdownMetadata.builder()
-            .setNodeId(sourceNodeId)
-            .setTargetNodeName(targetNodeName)
-            .setType(SingleNodeShutdownMetadata.Type.REPLACE)
-            .setReason(this.getTestName())
-            .setStartedAtMillis(1L)
-            .build();
-        NodesShutdownMetadata nodesShutdownMetadata = new NodesShutdownMetadata(new HashMap<>()).putSingleNodeMetadata(
-            nodeShutdownMetadata
-        );
-        return ClusterState.builder(initialState)
+    private ClusterState prepareState(String sourceNodeId, String targetNodeName) {
+        NodesShutdownMetadata nodesShutdownMetadata = createNodesShutdownMetadata(sourceNodeId, targetNodeName);
+        return ClusterState.builder(ClusterName.DEFAULT)
             .nodes(DiscoveryNodes.builder().add(NODE_A).add(NODE_B).add(NODE_C).build())
             .metadata(
                 Metadata.builder().put(IndexMetadata.builder(indexMetadata)).putCustom(NodesShutdownMetadata.TYPE, nodesShutdownMetadata)
             )
             .build();
+    }
+
+    private NodesShutdownMetadata createNodesShutdownMetadata(String sourceNodeId, String targetNodeName) {
+        return NodesShutdownMetadata.EMPTY.putSingleNodeMetadata(
+            SingleNodeShutdownMetadata.builder()
+                .setNodeId(sourceNodeId)
+                .setTargetNodeName(targetNodeName)
+                .setType(SingleNodeShutdownMetadata.Type.REPLACE)
+                .setReason(this.getTestName())
+                .setStartedAtMillis(1L)
+                .build()
+        );
+    }
+
+    private RoutingAllocation createRoutingAllocation(ClusterState state) {
+        var allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
+        allocation.debugDecision(true);
+        return allocation;
+    }
+
+    private void assertThatDecision(Decision decision, Decision.Type type, String explanation) {
+        assertThat(decision.type(), equalTo(type));
+        assertThat(decision.getExplanation(), equalTo(explanation));
     }
 }
