@@ -9,6 +9,7 @@
 package org.elasticsearch.cluster.routing.allocation.decider;
 
 import org.elasticsearch.Version;
+import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
@@ -28,16 +29,14 @@ import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.shard.ShardId;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
+import java.util.Set;
 
 import static org.elasticsearch.common.settings.ClusterSettings.createBuiltInClusterSettings;
 import static org.hamcrest.Matchers.equalTo;
 
 public class NodeShutdownAllocationDeciderTests extends ESAllocationTestCase {
-    private static final DiscoveryNode DATA_NODE = newNode("node-data", Collections.singleton(DiscoveryNodeRole.DATA_ROLE));
+    private static final DiscoveryNode DATA_NODE = newNode("node-data", Set.of(DiscoveryNodeRole.DATA_ROLE));
     private final ShardRouting shard = ShardRouting.newUnassigned(
         new ShardId("myindex", "myindex", 0),
         true,
@@ -48,7 +47,7 @@ public class NodeShutdownAllocationDeciderTests extends ESAllocationTestCase {
     private final ClusterSettings clusterSettings = createBuiltInClusterSettings();
     private final NodeShutdownAllocationDecider decider = new NodeShutdownAllocationDecider();
     private final AllocationDeciders allocationDeciders = new AllocationDeciders(
-        Arrays.asList(decider, new SameShardAllocationDecider(clusterSettings), new ReplicaAfterPrimaryActiveAllocationDecider())
+        List.of(decider, new SameShardAllocationDecider(clusterSettings), new ReplicaAfterPrimaryActiveAllocationDecider())
     );
 
     private final String idxName = "test-idx";
@@ -64,136 +63,137 @@ public class NodeShutdownAllocationDeciderTests extends ESAllocationTestCase {
     );
 
     public void testCanAllocateShardsToRestartingNode() {
-        ClusterState state = prepareState(ClusterState.EMPTY_STATE, SingleNodeShutdownMetadata.Type.RESTART);
-        RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
+        ClusterState state = prepareState(SingleNodeShutdownMetadata.Type.RESTART);
         RoutingNode routingNode = RoutingNodesHelper.routingNode(DATA_NODE.getId(), DATA_NODE, shard);
-        allocation.debugDecision(true);
 
-        Decision decision = decider.canAllocate(shard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertThat(
-            decision.getExplanation(),
-            equalTo("node [" + DATA_NODE.getId() + "] is preparing to restart, but will remain in the cluster")
+        assertThatDecision(
+            decider.canAllocate(shard, routingNode, createRoutingAllocation(state)),
+            Decision.Type.YES,
+            "node [" + DATA_NODE.getId() + "] is preparing to restart, but will remain in the cluster"
         );
     }
 
     public void testCannotAllocateShardsToRemovingNode() {
         for (SingleNodeShutdownMetadata.Type type : REMOVE_SHUTDOWN_TYPES) {
-            ClusterState state = prepareState(ClusterState.EMPTY_STATE, type);
-            RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
+            ClusterState state = prepareState(type);
             RoutingNode routingNode = RoutingNodesHelper.routingNode(DATA_NODE.getId(), DATA_NODE, shard);
-            allocation.debugDecision(true);
 
-            Decision decision = decider.canAllocate(shard, routingNode, allocation);
-            assertThat(type.toString(), decision.type(), equalTo(Decision.Type.NO));
-            assertThat(decision.getExplanation(), equalTo("node [" + DATA_NODE.getId() + "] is preparing to be removed from the cluster"));
+            assertThatDecision(
+                decider.canAllocate(shard, routingNode, createRoutingAllocation(state)),
+                Decision.Type.NO,
+                "node [" + DATA_NODE.getId() + "] is preparing to be removed from the cluster"
+            );
         }
     }
 
     public void testShardsCanRemainOnRestartingNode() {
-        ClusterState state = prepareState(ClusterState.EMPTY_STATE, SingleNodeShutdownMetadata.Type.RESTART);
-        RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
+        ClusterState state = prepareState(SingleNodeShutdownMetadata.Type.RESTART);
         RoutingNode routingNode = RoutingNodesHelper.routingNode(DATA_NODE.getId(), DATA_NODE, shard);
-        allocation.debugDecision(true);
 
-        Decision decision = decider.canRemain(null, shard, routingNode, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertThat(
-            decision.getExplanation(),
-            equalTo("node [" + DATA_NODE.getId() + "] is preparing to restart, but will remain in the cluster")
+        assertThatDecision(
+            decider.canRemain(null, shard, routingNode, createRoutingAllocation(state)),
+            Decision.Type.YES,
+            "node [" + DATA_NODE.getId() + "] is preparing to restart, but will remain in the cluster"
         );
     }
 
     public void testShardsCannotRemainOnRemovingNode() {
         for (SingleNodeShutdownMetadata.Type type : REMOVE_SHUTDOWN_TYPES) {
-            ClusterState state = prepareState(ClusterState.EMPTY_STATE, type);
-            RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
+            ClusterState state = prepareState(type);
             RoutingNode routingNode = RoutingNodesHelper.routingNode(DATA_NODE.getId(), DATA_NODE, shard);
-            allocation.debugDecision(true);
 
-            Decision decision = decider.canRemain(null, shard, routingNode, allocation);
-            assertThat(type.toString(), decision.type(), equalTo(Decision.Type.NO));
-            assertThat(
-                type.toString(),
-                decision.getExplanation(),
-                equalTo("node [" + DATA_NODE.getId() + "] is preparing to be removed from the cluster")
+            assertThatDecision(
+                decider.canRemain(null, shard, routingNode, createRoutingAllocation(state)),
+                Decision.Type.NO,
+                "node [" + DATA_NODE.getId() + "] is preparing to be removed from the cluster"
             );
         }
     }
 
     public void testCanAutoExpandToRestartingNode() {
-        ClusterState state = prepareState(ClusterState.EMPTY_STATE, SingleNodeShutdownMetadata.Type.RESTART);
-        RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
-        allocation.debugDecision(true);
+        ClusterState state = prepareState(SingleNodeShutdownMetadata.Type.RESTART);
 
-        Decision decision = decider.shouldAutoExpandToNode(indexMetadata, DATA_NODE, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertThat(
-            decision.getExplanation(),
-            equalTo("node [" + DATA_NODE.getId() + "] is preparing to restart, but will remain in the cluster")
+        assertThatDecision(
+            decider.shouldAutoExpandToNode(indexMetadata, DATA_NODE, createRoutingAllocation(state)),
+            Decision.Type.YES,
+            "node [" + DATA_NODE.getId() + "] is preparing to restart, but will remain in the cluster"
         );
     }
 
     public void testCanAutoExpandToNodeIfNoNodesShuttingDown() {
-        RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, ClusterState.EMPTY_STATE, null, null, 0);
-        allocation.debugDecision(true);
 
-        Decision decision = decider.shouldAutoExpandToNode(indexMetadata, DATA_NODE, allocation);
-        assertThat(decision.type(), equalTo(Decision.Type.YES));
-        assertThat(decision.getExplanation(), equalTo("no nodes are shutting down"));
+        assertThatDecision(
+            decider.shouldAutoExpandToNode(indexMetadata, DATA_NODE, createRoutingAllocation(ClusterState.EMPTY_STATE)),
+            Decision.Type.YES,
+            "no nodes are shutting down"
+        );
     }
 
     public void testCanAutoExpandToNodeThatIsNotShuttingDown() {
         for (SingleNodeShutdownMetadata.Type type : REMOVE_SHUTDOWN_TYPES) {
-            ClusterState state = prepareState(ClusterState.EMPTY_STATE, type, "other-node-id");
+            ClusterState state = prepareState(type, "other-node-id");
 
-            RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
-            allocation.debugDecision(true);
-
-            Decision decision = decider.shouldAutoExpandToNode(indexMetadata, DATA_NODE, allocation);
-            assertThat(type.toString(), decision.type(), equalTo(Decision.Type.YES));
-            assertThat(type.toString(), decision.getExplanation(), equalTo("this node is not shutting down"));
+            assertThatDecision(
+                decider.shouldAutoExpandToNode(indexMetadata, DATA_NODE, createRoutingAllocation(state)),
+                Decision.Type.YES,
+                "this node is not shutting down"
+            );
         }
     }
 
     public void testCannotAutoExpandToRemovingNode() {
         for (SingleNodeShutdownMetadata.Type type : REMOVE_SHUTDOWN_TYPES) {
-            ClusterState state = prepareState(ClusterState.EMPTY_STATE, type);
-            RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
-            allocation.debugDecision(true);
+            ClusterState state = prepareState(type);
 
-            Decision decision = decider.shouldAutoExpandToNode(indexMetadata, DATA_NODE, allocation);
-            assertThat(decision.type(), equalTo(Decision.Type.NO));
-            assertThat(decision.getExplanation(), equalTo("node [" + DATA_NODE.getId() + "] is preparing to be removed from the cluster"));
+            assertThatDecision(
+                decider.shouldAutoExpandToNode(indexMetadata, DATA_NODE, createRoutingAllocation(state)),
+                Decision.Type.NO,
+                "node [" + DATA_NODE.getId() + "] is preparing to be removed from the cluster"
+            );
         }
     }
 
-    private ClusterState prepareState(ClusterState initialState, SingleNodeShutdownMetadata.Type shutdownType) {
-        return prepareState(initialState, shutdownType, DATA_NODE.getId());
+    private ClusterState prepareState(SingleNodeShutdownMetadata.Type shutdownType) {
+        return prepareState(shutdownType, DATA_NODE.getId());
     }
 
-    private ClusterState prepareState(ClusterState initialState, SingleNodeShutdownMetadata.Type shutdownType, String nodeId) {
-        final String targetNodeName = shutdownType == SingleNodeShutdownMetadata.Type.REPLACE ? randomAlphaOfLengthBetween(10, 20) : null;
-        final SingleNodeShutdownMetadata nodeShutdownMetadata = SingleNodeShutdownMetadata.builder()
-            .setNodeId(nodeId)
-            .setType(shutdownType)
-            .setReason(this.getTestName())
-            .setStartedAtMillis(1L)
-            .setTargetNodeName(targetNodeName)
-            .setGracePeriod(
-                shutdownType == SingleNodeShutdownMetadata.Type.SIGTERM
-                    ? TimeValue.parseTimeValue(randomTimeValue(), this.getTestName())
-                    : null
-            )
-            .build();
-        NodesShutdownMetadata nodesShutdownMetadata = new NodesShutdownMetadata(new HashMap<>()).putSingleNodeMetadata(
-            nodeShutdownMetadata
-        );
-        return ClusterState.builder(initialState)
+    private ClusterState prepareState(SingleNodeShutdownMetadata.Type shutdownType, String nodeId) {
+        return ClusterState.builder(ClusterName.DEFAULT)
             .nodes(DiscoveryNodes.builder().add(DATA_NODE).build())
             .metadata(
-                Metadata.builder().put(IndexMetadata.builder(indexMetadata)).putCustom(NodesShutdownMetadata.TYPE, nodesShutdownMetadata)
+                Metadata.builder()
+                    .put(IndexMetadata.builder(indexMetadata))
+                    .putCustom(NodesShutdownMetadata.TYPE, createNodesShutdownMetadata(shutdownType, nodeId))
             )
             .build();
+    }
+
+    private NodesShutdownMetadata createNodesShutdownMetadata(SingleNodeShutdownMetadata.Type shutdownType, String nodeId) {
+        final String targetNodeName = shutdownType == SingleNodeShutdownMetadata.Type.REPLACE ? randomAlphaOfLengthBetween(10, 20) : null;
+        return NodesShutdownMetadata.EMPTY.putSingleNodeMetadata(
+            SingleNodeShutdownMetadata.builder()
+                .setNodeId(nodeId)
+                .setType(shutdownType)
+                .setReason(this.getTestName())
+                .setStartedAtMillis(1L)
+                .setTargetNodeName(targetNodeName)
+                .setGracePeriod(
+                    shutdownType == SingleNodeShutdownMetadata.Type.SIGTERM
+                        ? TimeValue.parseTimeValue(randomTimeValue(), this.getTestName())
+                        : null
+                )
+                .build()
+        );
+    }
+
+    private RoutingAllocation createRoutingAllocation(ClusterState state) {
+        var allocation = new RoutingAllocation(allocationDeciders, state, null, null, 0);
+        allocation.debugDecision(true);
+        return allocation;
+    }
+
+    private void assertThatDecision(Decision decision, Decision.Type type, String explanation) {
+        assertThat(decision.type(), equalTo(type));
+        assertThat(decision.getExplanation(), equalTo(explanation));
     }
 }
